--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:drawableStart="@drawable/ic_username"
         android:gravity="center_vertical"
         android:hint="@string/user_name"
+        android:text="@string/demo"
         android:inputType="text"/>
 
     <EditText
@@ -26,6 +27,7 @@
         android:drawableStart="@drawable/ic_password"
         android:gravity="center_vertical"
         android:hint="@string/password"
+        android:text="@string/demo"
         android:inputType="textPassword" />
 
     <Button
